# flora-server

./: .cirrus.yml  .dockerignore  .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .hlint.yaml  .plan.json  .sosrc  .stylish-haskell.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build-clever-cloud.sh  cabal.ci.project  cabal.prof.project  cabal.project  cabal.project.freeze  cabal.project.release  cabal.project.repositories  cat1.toml  categories.toml  cattest.toml  database.env  default.nix  docker-compose.live-eventlog.yml  docker-compose.yml  environment.ci.sh  environment.docker.sh  environment.live-eventlog.sh  environment.sh  environment.test.sh  flake.nix  flora.cabal  fourmolu.yaml  ghc-tags.yaml  (+14 more)
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  mergify.yml
assets/: .prettierignore  .stylelintignore  .stylelintrc.json  app.css  design-tokens.json  esbuild.config.js  package.json  parcel.mjs  postcss.config.js  tailwind.config.js
cbits/: categorise.cpp  categorise.dl  categorise.eclair  categorise.ll  categorize.dl
changelog.d/: 1065  262  263  456  550  553  557  558  560  564  567  579  580  605  63  762  778  781  783  790  794  801  805  810  811  813  817  819  823  848  863  864  865  874  881  890  901  910  943  953  (+3 more)
database/: schema.sql
deployment/: ansible.cfg  flora.nginx  flora.vcl  inventory.yaml  prometheus.yml
design/: .gitignore  20211221121849_sessions.md  app.css  package-lock.json  package.json  styles.css
docs/: .gitignore  .latestbuild  babel.config.js  docusaurus.config.js  docusaurus.config.ts  package.json  postbuild.js  sidebars.js  sidebars.ts
logs/: flora.json
migrations/: 20211105225100_create_users.sql  20211105230339_create_organisations.sql  20211105230339_create_user_organisation.sql  20211106003401_add_packages.sql  20211106003401_create_packages.sql  20211106120712_create_package_publishers.sql  20211106120712_package_publishers.sql  20211106123053_create_releases.sql  20211106123100_create_package_components.sql  20211106123253_create_requirements.sql  20211106140016_create_downloads.sql  20211113195849_add_dependants.sql  20211113195849_create_dependents.sql  20211216201331_create_persistent_sessions.sql  20220211183303_create_categories.sql  20220211183605_create_package_categories.sql  20220326182257_create_latest_versions.sql  20220531232510_create_oddjobs.sql  20220605185406_add-html-column-to-releases.sql  20220606165505_create_package_state.sql  20220610154503_delete_package_category_id.sql  20221011215519_add_changelogs.sql  20221227125533_add_oddjobs_payload_index.sql  20230216221827_add_metadata_to_packages.sql  20230407180816_exclude_deprecated_releases_from_latest_versions.sql  20230611171412_packageindexes.sql  20230623168754_add_repo_to_release.sql  20230805154456_remove_package_metadata.sql  20230809181650_create_binary.sql  20230924120348_add_revised_at.sql  20231002224826_add_url_to_package_indexes.sql  20231020123433_add_requirement_components.sql  20231122154627_add_totp_to_users.sql  (+29 more)
nix/: ci.nix  (+19 more)
test/fixtures/Cabal/: PBKDF2.cabal  Win32.cabal  a.cabal  ansi-terminal.cabal  ansi-wl-pprint.cabal  b.cabal  base-orphans.cabal  binary-0.2.cabal  binary-0.8.9.0.cabal  directory.cabal  filepath-1.4.100.4.cabal  flora.cabal  functor-classes-compat.cabal  generic-deriving.cabal  ghc-boot-th.cabal  jose.cabal  malformed-tar.cabal  mintty.cabal  nats.cabal  pg-entity.cabal  rts.cabal  semigroups.cabal  servant-server.cabal  stm.cabal  tasty-bench.cabal  test-framework.cabal  text-display-0.0.5.0.cabal  th-abstraction.cabal  time.cabal  transformers-compat.cabal
test/fixtures/Cabal/cardano/: Win32-network-0.1.0.0.cabal  Win32-network-0.1.1.0.cabal  Win32-network-0.1.1.1.cabal  Win32-network-0.2.0.0.cabal  Win32-network-0.2.0.1.cabal  aeson-record-0.1.0.0.cabal  async-components-0.1.0.0.cabal  async-components-0.1.1.0.cabal  base-deriving-via-0.1.0.0.cabal  base-deriving-via-0.1.0.1.cabal  base-deriving-via-0.1.0.2.cabal  base16-aeson-0.1.0.0.cabal  bech32-1.1.4.1.cabal  bech32-1.1.4.cabal  byron-spec-chain-0.1.0.0.cabal  byron-spec-chain-0.1.1.1.cabal  byron-spec-chain-0.1.1.2.cabal  byron-spec-ledger-0.1.1.1.cabal  byron-spec-ledger-0.1.1.2.cabal  cardano-api-1.35.4.cabal  cardano-api-10.0.0.0.cabal  cardano-api-10.1.0.0.cabal  cardano-api-10.10.0.0.cabal  cardano-api-10.11.0.0.cabal  cardano-api-10.11.1.0.cabal  cardano-api-10.12.0.0.cabal  cardano-api-10.13.0.0.cabal  cardano-api-10.13.1.0.cabal  cardano-api-10.14.0.0.cabal  cardano-api-10.14.1.0.cabal  cardano-api-10.15.0.0.cabal  cardano-api-10.16.0.0.cabal  cardano-api-10.16.1.0.cabal  cardano-api-10.16.2.0.cabal  cardano-api-10.16.3.0.cabal  cardano-api-10.17.0.0.cabal  cardano-api-10.2.0.0.cabal  cardano-api-10.3.0.0.cabal  cardano-api-10.4.0.0.cabal  cardano-api-10.5.0.0.cabal  (+782 more)
test/fixtures/Cabal/hackage/: Crypto.cabal  FailT.cabal  QuickCheck-GenT.cabal  Unique.cabal  Win32.cabal  aeson-0.4.0.0.cabal  aeson-2.0.1.0.cabal  aeson-2.2.3.0.cabal  aeson-pretty.cabal  array.cabal  async-2.2.5.cabal  attoparsec.cabal  b.cabal  bad-tar.cabal  base-3.0.3.1.cabal  base16.cabal  base58-bytestring.cabal  base64-bytestring-type.cabal  base64-bytestring.cabal  bech32-th.cabal  bimap.cabal  biscuit-haskell-0.1.0.0.cabal  biscuit-haskell-0.2.0.0.cabal  biscuit-haskell-0.3.0.0.cabal  biscuit-haskell-0.4.0.0.cabal  bz2-0.1.0.0.cabal  bz2-1.0.1.1.cabal  bzlib-0.4.cabal  bzlib-0.5.2.0.cabal  bzlib-conduit-0.1.0.0.cabal  bzlib-conduit-0.3.0.3.cabal  cabal-install-1.24.0.0.cabal  cabal-install-3.10.2.0.cabal  canonical-json.cabal  cborg-0.2.10.0.cabal  constraints.cabal  criterion.cabal  crypton.cabal  data-default-class.cabal  data-default.cabal  (+110 more)
test/fixtures/Cabal/mlabs/: plutarch-0.cabal  plutarch-1.10.0.cabal  plutarch-1.10.1.cabal  plutarch-1.4.0.cabal  plutarch-1.5.0.cabal  plutarch-1.8.1.cabal  plutarch-ledger-api-3.2.1.cabal  plutarch-ledger-api-3.3.0.cabal  plutarch-ledger-api.cabal  plutarch-orphanage-1.0.3.cabal  plutarch-orphanage-1.1.0.cabal  plutarch-orphanage.cabal
(+706 files in other folders)
