cabal-version:      3.0
name:               flora
version:            0.0.1.0
homepage:           https://github.com/flora-pm/flora-server/#readme
bug-reports:        https://github.com/flora-pm/flora-server/issues
author:             Théophile Choutri
maintainer:         Théophile Choutri
license:            BSD-3-Clause
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/flora-pm/flora-server

flag prod
  description:
    Compile the project with additional optimisations (takes longer)  

  default:     False
  manual:      True

common common-extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns
    OverloadedRecordDot

  default-language:   GHC2021

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -fprint-potential-instances -Wno-unticked-promoted-constructors
    -Werror=unused-imports

  if flag(prod)
    ghc-options:
      -flate-specialise -funbox-strict-fields
      -finline-generics-aggressively

common common-rts-options
  ghc-options: -threaded "-with-rtsopts=-N -T"

library
  import:          common-extensions
  import:          common-ghc-options
  extra-libraries: stdc++
  cxx-options:     -std=c++17 -Wall -D__EMBEDDED_SOUFFLE__
  cxx-sources:     cbits/categorise.cpp

  -- pkgconfig-depends: libpq -any
  hs-source-dirs:  src
  exposed-modules:
    Data.Aeson.Orphans
    Data.Text.Display.Orphans
    Data.Time.Orphans
    Distribution.Orphans
    Flora.Environment
    Flora.Environment.Config
    Flora.Environment.OddJobs
    Flora.Import.Categories
    Flora.Import.Categories.Tuning
    Flora.Import.Package
    Flora.Import.Package.Bulk
    Flora.Import.Types
    Flora.Model.Admin.Report
    Flora.Model.Category
    Flora.Model.Category.Query
    Flora.Model.Category.Types
    Flora.Model.Category.Update
    Flora.Model.Downloads
    Flora.Model.Organisation
    Flora.Model.Package
    Flora.Model.Package.Component
    Flora.Model.Package.Orphans
    Flora.Model.Package.Publisher
    Flora.Model.Package.Query
    Flora.Model.Package.Types
    Flora.Model.Package.Update
    Flora.Model.PersistentSession
    Flora.Model.Release
    Flora.Model.Release.Orphans
    Flora.Model.Release.Query
    Flora.Model.Release.Types
    Flora.Model.Release.Update
    Flora.Model.Requirement
    Flora.Model.User
    Flora.Model.User.Orphans
    Flora.Model.User.Query
    Flora.Model.User.Update
    Flora.OddJobs
    Flora.OddJobs.Types
    Flora.Publish
    Flora.Search
    Flora.ThirdParties.Hackage.API
    Flora.ThirdParties.Hackage.Client
    FloraWeb.Autoreload
    FloraWeb.Client
    FloraWeb.Components.CategoryCard
    FloraWeb.Components.Footer
    FloraWeb.Components.Header
    FloraWeb.Components.Navbar
    FloraWeb.Components.PackageListHeader
    FloraWeb.Components.PackageListItem
    FloraWeb.Components.PaginationNav
    FloraWeb.Components.Utils
    FloraWeb.Components.VersionListHeader
    FloraWeb.Components.VersionListItem
    FloraWeb.Links
    FloraWeb.Routes
    FloraWeb.Routes.Pages
    FloraWeb.Routes.Pages.Admin
    FloraWeb.Routes.Pages.Categories
    FloraWeb.Routes.Pages.Packages
    FloraWeb.Routes.Pages.Search
    FloraWeb.Routes.Pages.Sessions
    FloraWeb.Server
    FloraWeb.Server.Auth
    FloraWeb.Server.Auth.Types
    FloraWeb.Server.Guards
    FloraWeb.Server.Logging
    FloraWeb.Server.Metrics
    FloraWeb.Server.Pages
    FloraWeb.Server.Pages.Admin
    FloraWeb.Server.Pages.Categories
    FloraWeb.Server.Pages.Packages
    FloraWeb.Server.Pages.Search
    FloraWeb.Server.Pages.Sessions
    FloraWeb.Server.Tracing
    FloraWeb.Server.Utils
    FloraWeb.Session
    FloraWeb.Templates
    FloraWeb.Templates.Admin
    FloraWeb.Templates.Admin.Packages
    FloraWeb.Templates.Admin.Users
    FloraWeb.Templates.Error
    FloraWeb.Templates.Packages.Dependencies
    FloraWeb.Templates.Packages.Dependents
    FloraWeb.Templates.Packages.Listing
    FloraWeb.Templates.Packages.Versions
    FloraWeb.Templates.Pages.Categories
    FloraWeb.Templates.Pages.Categories.Index
    FloraWeb.Templates.Pages.Categories.Show
    FloraWeb.Templates.Pages.Home
    FloraWeb.Templates.Pages.Packages
    FloraWeb.Templates.Pages.Search
    FloraWeb.Templates.Pages.Sessions
    FloraWeb.Templates.Types
    FloraWeb.Types
    Log.Backend.File
    Lucid.Orphans

  build-depends:
    , aeson                      <=1.6
    , async                      ^>=2.2
    , base                       ^>=4.16
    , blaze-builder
    , bytestring                 ^>=0.10
    , Cabal-syntax               ^>=3.8
    , clock                      ^>=0.8
    , cmark-gfm                  ^>=0.2
    , colourista                 ^>=0.1
    , commonmark
    , commonmark-extensions
    , containers                 ^>=0.6
    , cookie                     ^>=0.4
    , cryptohash                 ^>=0.11
    , data-default
    , directory                  ^>=1.3
    , effectful
    , effectful-core
    , envparse                   ^>=0.5
    , filepath                   ^>=1.4
    , http-api-data              ^>=0.4
    , http-client                ==0.7.10
    , http-client-tls
    , http-media
    , http-types                 ^>=0.12
    , iso8601-time               ^>=0.1
    , lens
    , log-base                   ^>=0.11
    , log-effectful
    , lucid                      ^>=2.11
    , lucid-alpine               ^>=0.1
    , lucid-aria                 ^>=0.1
    , lucid-svg                  ^>=0.7
    , monad-control              ^>=1.0
    , monad-time                 ^>=0.3
    , mtl                        ^>=2.2
    , odd-jobs
    , optics-core                ^>=0.4
    , optparse-applicative       ^>=0.16
    , password                   ^>=3.0
    , password-types             ^>=1.0
    , pcre2
    , pg-entity                  ^>=0.0
    , pg-transact                ^>=0.3
    , pg-transact-effectful
    , postgresql-simple          ^>=0.6
    , pretty                     ^>=1.1
    , pretty-simple              ^>=4.0
    , prometheus-client          ^>=1.1
    , prometheus-metrics-ghc     ^>=1.0
    , prometheus-proc            ^>=0.1
    , PyF                        ^>=0.11
    , raven-haskell              ^>=0.1
    , resource-pool              >=0.3     && <0.4.0.0
    , safe-exceptions
    , servant                    ^>=0.19
    , servant-client             ^>=0.19
    , servant-client-core        ^>=0.19
    , servant-effectful
    , servant-lucid              ^>=0.9
    , servant-server             ^>=0.19
    , servant-websockets         ^>=2.0
    , slugify                    ^>=0.1
    , souffle-haskell            ^>=3.4
    , split                      ^>=0.2
    , streaming                  ^>=0.2
    , template-haskell
    , text
    , text-display
    , time                       ^>=1.9
    , time-effectful
    , transformers               ^>=0.5
    , transformers-base          ^>=0.4
    , typed-process              ^>=0.2
    , unordered-containers       ^>=0.2
    , uuid                       ^>=1.3
    , vector                     ^>=0.12
    , vector-algorithms          ^>=0.8
    , wai                        ^>=3.2
    , wai-log                    ^>=0.3
    , wai-middleware-heartbeat   ^>=0.0
    , wai-middleware-prometheus  ^>=1.0
    , warp                       ^>=3.3
    , websockets                 ^>=0.12
    , wreq                       >=0.5.3.3

executable flora-server
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/server
  build-depends:
    , base
    , flora

executable flora-cli
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  other-modules:  DesignSystem
  hs-source-dirs: app/cli
  build-depends:
    , ansi-terminal
    , base
    , bytestring
    , Cabal-syntax
    , colourista
    , directory
    , effectful
    , effectful-core
    , flora
    , http-client            ==0.7.10
    , log-base
    , log-effectful
    , lucid
    , monad-control
    , optics-core
    , optparse-applicative   ^>=0.16
    , password-types
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , postgresql-simple
    , PyF
    , text
    , text-display
    , time-effectful
    , transformers
    , typed-process
    , uuid
    , vector

test-suite flora-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , aeson
    , base
    , bytestring
    , Cabal-syntax
    , containers
    , effectful-core
    , exceptions
    , flora
    , hedgehog
    , http-client            ==0.7.10
    , log-base
    , log-effectful
    , network-uri
    , optics-core
    , password
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , postgresql-migration
    , postgresql-simple
    , pretty-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , tasty
    , tasty-hunit
    , text
    , time
    , time-effectful
    , transformers
    , uuid
    , vector

  other-modules:
    Flora.CabalSpec
    Flora.CategorySpec
    Flora.OddJobSpec
    Flora.PackageSpec
    Flora.TemplateSpec
    Flora.TestUtils
    Flora.UserSpec
