cabal-version:      3.0
name:               flora
version:            1.0.13
homepage:           https://github.com/flora-pm/flora-server/#readme
bug-reports:        https://github.com/flora-pm/flora-server/issues
author:             Théophile Choutri
maintainer:         Théophile Choutri
license:            BSD-3-Clause
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

tested-with:        GHC ==9.4.5

source-repository head
  type:     git
  location: https://github.com/flora-pm/flora-server

flag prod
  description:
    Compile the project with additional optimisations (takes longer)

  default:     False
  manual:      True

common common-extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

  if flag(prod)
    ghc-options:
      -flate-specialise -funbox-strict-fields
      -finline-generics-aggressively -fexpose-all-unfoldings

common common-rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          common-extensions
  import:          common-ghc-options
  extra-libraries: stdc++
  cxx-options:     -std=c++17 -Wall -D__EMBEDDED_SOUFFLE__
  cxx-sources:     cbits/categorise.cpp
  hs-source-dirs:  ./src/core ./src/datatypes

  -- cabal-fmt: expand src/core
  -- cabal-fmt: expand src/datatypes
  exposed-modules:
    Data.Aeson.Orphans
    Data.Password.Orphans
    Data.Positive
    Data.Text.Display.Orphans
    Data.Time.Orphans
    Distribution.Orphans
    Distribution.Orphans.CompilerFlavor
    Distribution.Orphans.ConfVar
    Distribution.Orphans.PackageFlag
    Distribution.Orphans.Version
    Flora.Environment
    Flora.Environment.Config
    Flora.Import.Categories
    Flora.Import.Categories.Tuning
    Flora.Import.Package
    Flora.Import.Package.Bulk
    Flora.Import.Package.Types
    Flora.Import.Types
    Flora.Logging
    Flora.Model.Admin.Report
    Flora.Model.Category
    Flora.Model.Category.Query
    Flora.Model.Category.Types
    Flora.Model.Category.Update
    Flora.Model.Component.Query
    Flora.Model.Component.Types
    Flora.Model.Downloads
    Flora.Model.Job
    Flora.Model.Organisation
    Flora.Model.Package
    Flora.Model.Package.Orphans
    Flora.Model.Package.Publisher
    Flora.Model.Package.Query
    Flora.Model.Package.Types
    Flora.Model.Package.Update
    Flora.Model.PackageIndex
    Flora.Model.PersistentSession
    Flora.Model.Release
    Flora.Model.Release.Query
    Flora.Model.Release.Types
    Flora.Model.Release.Update
    Flora.Model.Requirement
    Flora.Model.User
    Flora.Model.User.Orphans
    Flora.Model.User.Query
    Flora.Model.User.Update
    Flora.Publish
    Flora.Search
    JSON
    Log.Backend.File
    Lucid.Orphans

  build-depends:
    , aeson
    , base                   ^>=4.17
    , base64
    , blaze-builder
    , bytestring
    , Cabal-syntax
    , colourista
    , containers
    , cryptohash-md5
    , cryptonite
    , cryptonite-conduit
    , deepseq
    , deriving-aeson
    , directory
    , effectful-core
    , envparse
    , filepath
    , http-api-data
    , iso8601-time
    , log-base
    , log-effectful
    , lucid
    , memory
    , monad-time-effectful
    , mtl
    , odd-jobs
    , openapi3
    , optics-core
    , password
    , password-types
    , pcre2
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , poolboy
    , postgresql-simple
    , pretty
    , resource-pool
    , servant-lucid
    , servant-server
    , slugify
    , souffle-haskell        ==3.5.1
    , streamly
    , streamly-core
    , tar
    , text
    , text-display
    , time
    , unliftio
    , uuid
    , vector
    , vector-algorithms
    , zlib

library flora-web
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  ./src/web

  -- cabal-fmt: expand src/web
  exposed-modules:
    FloraWeb.API.Errors
    FloraWeb.API.Routes
    FloraWeb.API.Routes.Packages
    FloraWeb.API.Routes.Packages.Types
    FloraWeb.API.Server
    FloraWeb.API.Server.Packages
    FloraWeb.Client
    FloraWeb.Common.Auth
    FloraWeb.Common.Auth.Types
    FloraWeb.Common.Guards
    FloraWeb.Common.Metrics
    FloraWeb.Common.OpenSearch
    FloraWeb.Common.Pagination
    FloraWeb.Common.Tracing
    FloraWeb.Common.Utils
    FloraWeb.Components.CategoryCard
    FloraWeb.Components.Footer
    FloraWeb.Components.Header
    FloraWeb.Components.Navbar
    FloraWeb.Components.PackageListHeader
    FloraWeb.Components.PackageListItem
    FloraWeb.Components.PaginationNav
    FloraWeb.Components.Utils
    FloraWeb.Components.VersionListHeader
    FloraWeb.Embedded
    FloraWeb.Links
    FloraWeb.Pages.Routes
    FloraWeb.Pages.Routes.Admin
    FloraWeb.Pages.Routes.Categories
    FloraWeb.Pages.Routes.Packages
    FloraWeb.Pages.Routes.Search
    FloraWeb.Pages.Routes.Sessions
    FloraWeb.Pages.Server
    FloraWeb.Pages.Server.Admin
    FloraWeb.Pages.Server.Categories
    FloraWeb.Pages.Server.Packages
    FloraWeb.Pages.Server.Search
    FloraWeb.Pages.Server.Sessions
    FloraWeb.Pages.Templates
    FloraWeb.Pages.Templates.Admin
    FloraWeb.Pages.Templates.Admin.Packages
    FloraWeb.Pages.Templates.Admin.Users
    FloraWeb.Pages.Templates.Error
    FloraWeb.Pages.Templates.Haddock
    FloraWeb.Pages.Templates.Packages
    FloraWeb.Pages.Templates.Pages.Categories
    FloraWeb.Pages.Templates.Pages.Categories.Index
    FloraWeb.Pages.Templates.Pages.Categories.Show
    FloraWeb.Pages.Templates.Pages.Home
    FloraWeb.Pages.Templates.Pages.Packages
    FloraWeb.Pages.Templates.Pages.Search
    FloraWeb.Pages.Templates.Pages.Sessions
    FloraWeb.Pages.Templates.Types
    FloraWeb.Routes
    FloraWeb.Servant.Common
    FloraWeb.Server
    FloraWeb.Session
    FloraWeb.Types

  build-depends:
    , aeson
    , async
    , base                       ^>=4.17
    , bytestring
    , Cabal-syntax
    , clock
    , cmark-gfm
    , colourista
    , containers
    , cookie
    , data-default
    , deepseq
    , deriving-aeson
    , effectful
    , effectful-core
    , flora
    , flora-jobs
    , haddock-library
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , log-base
    , log-effectful
    , lucid
    , lucid-alpine
    , lucid-svg
    , monad-time
    , monad-time-effectful
    , mtl
    , network-uri
    , odd-jobs
    , openapi3
    , optics-core
    , password
    , pg-entity
    , pg-transact-effectful
    , postgresql-simple
    , pretty
    , prometheus-client
    , prometheus-metrics-ghc
    , prometheus-proc
    , PyF
    , raven-haskell
    , resource-pool
    , safe-exceptions
    , servant
    , servant-client
    , servant-client-core
    , servant-lucid
    , servant-openapi3
    , servant-server
    , text
    , text-display
    , time
    , uuid
    , vector
    , vector-algorithms
    , wai
    , wai-app-static
    , wai-log
    , wai-middleware-heartbeat
    , wai-middleware-prometheus
    , warp
    , xml-conduit
    , xml-conduit-writer

library flora-jobs
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src/jobs-worker

  -- cabal-fmt expand: src/jobs-worker
  exposed-modules:
    FloraJobs.Render
    FloraJobs.Runner
    FloraJobs.Scheduler
    FloraJobs.ThirdParties.Hackage.API
    FloraJobs.ThirdParties.Hackage.Client
    FloraJobs.Types

  build-depends:
    , aeson
    , base
    , bytestring
    , Cabal-syntax
    , commonmark
    , commonmark-extensions
    , containers
    , effectful-core
    , flora
    , http-client
    , http-media
    , http-types
    , log-base
    , log-effectful
    , lucid
    , monad-time-effectful
    , odd-jobs
    , pg-entity
    , pg-transact-effectful
    , postgresql-simple
    , req
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , text
    , text-display
    , time
    , typed-process
    , vector

executable flora-server
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/server
  build-depends:
    , base
    , flora-web

executable flora-cli
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  other-modules:  DesignSystem
  hs-source-dirs: app/cli
  build-depends:
    , base
    , bytestring
    , Cabal-syntax
    , effectful-core
    , envparse
    , flora
    , flora-web
    , log-base
    , lucid
    , optics-core
    , optparse-applicative
    , password-types
    , pg-transact-effectful
    , PyF
    , text
    , transformers
    , uuid
    , vector

test-suite flora-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , aeson
    , base
    , Cabal-syntax
    , containers
    , effectful-core
    , exceptions
    , flora
    , flora-web
    , hedgehog
    , http-client
    , log-base
    , log-effectful
    , monad-time-effectful
    , optics-core
    , password
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , postgresql-migration
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-server
    , tasty
    , tasty-hunit
    , text
    , time
    , transformers
    , uuid
    , vector

  other-modules:
    Flora.CabalSpec
    Flora.CategorySpec
    Flora.ImportSpec
    Flora.OddJobSpec
    Flora.PackageSpec
    Flora.TemplateSpec
    Flora.TestUtils
    Flora.UserSpec
