cabal-version:      3.0
name:               flora
version:            1.0.24
homepage:           https://github.com/flora-pm/flora-server/#readme
bug-reports:        https://github.com/flora-pm/flora-server/issues
author:             Théophile Choutri
maintainer:         Théophile Choutri
license:            BSD-3-Clause
build-type:         Simple
extra-source-files: LICENSE
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==9.6.6

source-repository head
  type:     git
  location: https://github.com/flora-pm/flora-server

flag prod
  description:
    Compile the project with additional optimisations (takes longer)

  default:     False
  manual:      True

common common-extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

  if flag(prod)
    ghc-options:
      -flate-specialise -funbox-strict-fields
      -finline-generics-aggressively -fexpose-all-unfoldings

common common-rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  ./src/core ./src/datatypes

  -- cabal-fmt: expand src/core
  -- cabal-fmt: expand src/datatypes
  exposed-modules:
    Advisories.AffectedVersionRange.Orphans
    Advisories.CAPEC.Orphans
    Advisories.CVSS.Orphans
    Advisories.CWE.Orphans
    Advisories.HsecId.Orphans
    Advisories.Keyword.Orphans
    Advisories.System.Orphans
    Data.Aeson.Orphans
    Data.Positive
    Data.Text.Display.Orphans
    Data.Text.HTML
    Data.Time.Orphans
    Database.PostgreSQL.Simple.Orphans
    Distribution.Orphans
    Distribution.Orphans.BuildType
    Distribution.Orphans.CompilerFlavor
    Distribution.Orphans.ConfVar
    Distribution.Orphans.PackageFlag
    Distribution.Orphans.Version
    Effectful.Poolboy
    Flora.Environment
    Flora.Environment.Config
    Flora.Environment.Env
    Flora.Import.Categories
    Flora.Import.Package
    Flora.Import.Package.Bulk
    Flora.Import.Package.Types
    Flora.Import.Types
    Flora.Logging
    Flora.Model.Admin.Report
    Flora.Model.BlobIndex.Internal
    Flora.Model.BlobIndex.Query
    Flora.Model.BlobIndex.Types
    Flora.Model.BlobIndex.Update
    Flora.Model.BlobStore.API
    Flora.Model.BlobStore.Types
    Flora.Model.Category
    Flora.Model.Category.Query
    Flora.Model.Category.Types
    Flora.Model.Category.Update
    Flora.Model.Component.Query
    Flora.Model.Component.Types
    Flora.Model.Downloads
    Flora.Model.Job
    Flora.Model.Organisation
    Flora.Model.Package
    Flora.Model.Package.Guard
    Flora.Model.Package.Orphans
    Flora.Model.Package.Publisher
    Flora.Model.Package.Query
    Flora.Model.Package.Types
    Flora.Model.Package.Update
    Flora.Model.PackageGroup.Query
    Flora.Model.PackageGroup.Types
    Flora.Model.PackageGroup.Update
    Flora.Model.PackageGroupPackage.Query
    Flora.Model.PackageGroupPackage.Types
    Flora.Model.PackageGroupPackage.Update
    Flora.Model.PackageIndex.Query
    Flora.Model.PackageIndex.Types
    Flora.Model.PackageIndex.Update
    Flora.Model.PersistentSession
    Flora.Model.Release
    Flora.Model.Release.Guard
    Flora.Model.Release.Query
    Flora.Model.Release.Types
    Flora.Model.Release.Update
    Flora.Model.Requirement
    Flora.Model.User
    Flora.Model.User.Query
    Flora.Model.User.Update
    Flora.Monitoring
    Flora.Normalise
    Flora.QRCode
    Flora.Tracing
    JSON
    Log.Backend.File
    Lucid.Orphans
    OSV.Reference.Orphans
    Pandoc.Orphans
    Servant.API.ContentTypes.GZip

  build-depends:
    , aeson
    , attoparsec
    , base                   ^>=4.18.2
    , base16-bytestring
    , base64
    , bytestring
    , Cabal-syntax
    , colourista
    , containers
    , cryptohash-md5
    , cryptohash-sha256
    , cryptonite
    , cryptonite-conduit
    , cvss
    , dani-servant-lucid2
    , deepseq
    , deriving-aeson
    , directory
    , effectful
    , effectful-core
    , effectful-plugin
    , envparse
    , filepath
    , hsec-core
    , hsec-sync
    , http-api-data
    , http-media
    , iso8601-time
    , JuicyPixels
    , log-base
    , log-effectful
    , lucid2
    , memory
    , monad-time-effectful
    , network
    , odd-jobs
    , openapi3
    , optics-core
    , osv
    , pandoc-types
    , pcre2
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , poolboy
    , postgresql-simple
    , pretty
    , prometheus-client
    , qrcode-core
    , qrcode-juicypixels
    , resource-pool
    , sel
    , servant
    , servant-server
    , slugify
    , streamly
    , streamly-core
    , tar
    , text
    , text-display
    , time
    , tracing
    , tracing-effectful
    , unliftio
    , utf8-string
    , uuid
    , vector
    , zlib

  ghc-options:     -fplugin=Effectful.Plugin

library flora-search
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  ./src/search

  -- cabal-fmt: expand src/search
  exposed-modules: Flora.Search
  build-depends:
    , aeson
    , base
    , effectful-core
    , flora
    , flora-advisories
    , log-base
    , log-effectful
    , monad-time-effectful
    , pg-transact-effectful
    , text
    , text-display
    , tracing
    , tracing-effectful
    , vector

library flora-advisories
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  ./src/advisories

  -- cabal-fmt: expand src/advisories
  exposed-modules:
    Advisories.Import
    Advisories.Import.Error
    Advisories.Model.Advisory.Query
    Advisories.Model.Advisory.Types
    Advisories.Model.Advisory.Update
    Advisories.Model.Affected.Query
    Advisories.Model.Affected.Types
    Advisories.Model.Affected.Update

  build-depends:
    , aeson
    , base
    , Cabal-syntax
    , containers
    , cvss
    , deepseq
    , effectful
    , flora
    , hsec-core
    , hsec-sync
    , hsec-tools
    , osv
    , pandoc-types
    , pg-entity
    , pg-transact-effectful
    , postgresql-simple
    , text
    , time
    , tracing
    , tracing-effectful
    , uuid
    , validation-selective
    , vector

library flora-web
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  ./src/web

  -- cabal-fmt: expand src/web
  exposed-modules:
    FloraWeb.API.Errors
    FloraWeb.API.Routes
    FloraWeb.API.Routes.Packages
    FloraWeb.API.Routes.Packages.Types
    FloraWeb.API.Server
    FloraWeb.API.Server.Packages
    FloraWeb.Client
    FloraWeb.Common.Auth
    FloraWeb.Common.Auth.TwoFactor
    FloraWeb.Common.Auth.Types
    FloraWeb.Common.Guards
    FloraWeb.Common.OpenSearch
    FloraWeb.Common.Pagination
    FloraWeb.Common.Tracing
    FloraWeb.Common.Utils
    FloraWeb.Components.AdvisoryListItem
    FloraWeb.Components.Alert
    FloraWeb.Components.Button
    FloraWeb.Components.CategoryCard
    FloraWeb.Components.Header
    FloraWeb.Components.Icons
    FloraWeb.Components.MainSearchBar
    FloraWeb.Components.Navbar
    FloraWeb.Components.PackageListHeader
    FloraWeb.Components.PackageListItem
    FloraWeb.Components.PaginationNav
    FloraWeb.Components.Pill
    FloraWeb.Components.SlimSearchBar
    FloraWeb.Components.Utils
    FloraWeb.Components.VersionListHeader
    FloraWeb.Embedded
    FloraWeb.Links
    FloraWeb.LiveReload
    FloraWeb.Pages.Routes
    FloraWeb.Pages.Routes.Admin
    FloraWeb.Pages.Routes.Categories
    FloraWeb.Pages.Routes.Packages
    FloraWeb.Pages.Routes.Search
    FloraWeb.Pages.Routes.Sessions
    FloraWeb.Pages.Routes.Settings
    FloraWeb.Pages.Server
    FloraWeb.Pages.Server.Admin
    FloraWeb.Pages.Server.Categories
    FloraWeb.Pages.Server.Packages
    FloraWeb.Pages.Server.Search
    FloraWeb.Pages.Server.Sessions
    FloraWeb.Pages.Server.Settings
    FloraWeb.Pages.Templates
    FloraWeb.Pages.Templates.Admin
    FloraWeb.Pages.Templates.Admin.Packages
    FloraWeb.Pages.Templates.Admin.Users
    FloraWeb.Pages.Templates.Error
    FloraWeb.Pages.Templates.Haddock
    FloraWeb.Pages.Templates.Packages
    FloraWeb.Pages.Templates.Screens.Categories
    FloraWeb.Pages.Templates.Screens.Categories.Index
    FloraWeb.Pages.Templates.Screens.Categories.Show
    FloraWeb.Pages.Templates.Screens.Home
    FloraWeb.Pages.Templates.Screens.Packages
    FloraWeb.Pages.Templates.Screens.Search
    FloraWeb.Pages.Templates.Screens.Sessions
    FloraWeb.Pages.Templates.Screens.Settings
    FloraWeb.Pages.Templates.Types
    FloraWeb.Routes
    FloraWeb.Servant.Common
    FloraWeb.Server
    FloraWeb.Session
    FloraWeb.Types

  build-depends:
    , aeson
    , async
    , base                       ^>=4.18.2
    , base32
    , bytestring
    , Cabal-syntax
    , chronos
    , cmark-gfm
    , colourista
    , containers
    , cookie
    , cvss
    , dani-servant-lucid2
    , data-default
    , deepseq
    , deriving-aeson
    , effectful
    , effectful-core
    , effectful-plugin
    , extra
    , flora
    , flora-advisories
    , flora-jobs
    , flora-search
    , haddock-library
    , htmx-lucid
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , log-base
    , log-effectful
    , lucid2
    , monad-time
    , monad-time-effectful
    , mtl
    , network-uri
    , odd-jobs
    , one-time-password          ==3.0.0.0
    , openapi3
    , optics-core
    , pg-entity
    , pg-transact-effectful
    , postgresql-simple
    , pretty
    , prometheus-client
    , prometheus-metrics-ghc
    , prometheus-proc
    , PyF
    , raven-haskell
    , resource-pool
    , safe-exceptions
    , sel
    , servant
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-prometheus
    , servant-server
    , text
    , text-display
    , time
    , torsor
    , tracing
    , tracing-effectful
    , uuid
    , vector
    , vector-algorithms
    , wai
    , wai-app-static
    , wai-log
    , wai-middleware-heartbeat
    , wai-middleware-prometheus
    , warp
    , xml-conduit
    , xml-conduit-writer

  ghc-options:     -fplugin=Effectful.Plugin

library flora-jobs
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src/jobs-worker

  -- cabal-fmt expand: src/jobs-worker
  exposed-modules:
    FloraJobs.Render
    FloraJobs.Runner
    FloraJobs.Scheduler
    FloraJobs.ThirdParties.Hackage.API
    FloraJobs.ThirdParties.Hackage.Client
    FloraJobs.Types

  build-depends:
    , aeson
    , base
    , bytestring
    , Cabal-syntax
    , commonmark
    , commonmark-extensions
    , containers
    , effectful
    , effectful-core
    , effectful-plugin
    , flora
    , http-client
    , http-media
    , http-types
    , log-base
    , log-effectful
    , monad-time-effectful
    , odd-jobs
    , pg-entity
    , pg-transact-effectful
    , poolboy
    , postgresql-simple
    , req
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , text
    , text-display
    , time
    , typed-process-effectful
    , vector

  ghc-options:     -fplugin=Effectful.Plugin

executable flora-server
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/server
  build-depends:
    , base
    , containers
    , effectful
    , flora
    , flora-jobs
    , flora-web
    , log-base
    , log-effectful
    , pg-entity
    , pg-transact-effectful
    , postgresql-simple
    , resource-pool
    , text
    , vector

executable flora-cli
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  other-modules:  DesignSystem
  hs-source-dirs: app/cli
  build-depends:
    , base
    , bytestring
    , Cabal-syntax
    , containers
    , cvss
    , effectful
    , effectful-core
    , effectful-plugin
    , envparse
    , extra
    , filepath
    , flora
    , flora-advisories
    , flora-search
    , flora-web
    , hsec-core
    , log-base
    , log-effectful
    , lucid2
    , monad-time-effectful
    , optics-core
    , optparse-applicative
    , pg-transact-effectful
    , poolboy
    , PyF
    , sel
    , text
    , text-display
    , time
    , tracing
    , tracing-effectful
    , transformers
    , uuid
    , vector
    , zlib

  ghc-options:    -fplugin=Effectful.Plugin

test-suite flora-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , aeson
    , base
    , bytestring
    , Cabal-syntax
    , containers
    , effectful
    , effectful-core
    , effectful-plugin
    , exceptions
    , extra
    , filepath
    , flora
    , flora-advisories
    , flora-search
    , flora-web
    , hedgehog
    , http-client
    , log-base
    , log-effectful
    , monad-time-effectful
    , optics-core
    , pg-entity
    , pg-transact
    , pg-transact-effectful
    , poolboy
    , postgresql-migration
    , postgresql-simple
    , resource-pool
    , sel
    , servant
    , servant-client
    , servant-server
    , tar
    , tasty
    , tasty-hunit
    , tasty-test-reporter
    , text
    , time
    , tracing-effectful
    , uuid
    , vector
    , vector-algorithms
    , zlib

  ghc-options:    -fplugin=Effectful.Plugin
  other-modules:
    Flora.AdvisorySpec
    Flora.BlobSpec
    Flora.CabalSpec
    Flora.CategorySpec
    Flora.ImportSpec
    Flora.OddJobSpec
    Flora.PackageGroupSpec
    Flora.PackageSpec
    Flora.SearchSpec
    Flora.TemplateSpec
    Flora.TestUtils
    Flora.UserSpec
