cabal-version:    3.0
name:             hpkg
version:          0.0.1.0
homepage:         https://github.com/hpkg/server#readme
bug-reports:      https://github.com/hpkg/server/issues
author:           Théophile Choutri
maintainer:       Théophile Choutri
license:          MIT
build-type:       Simple
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md

source-repository head
  type: git
  location: https://github.com/hpkg/server

common common-extensions
  default-extensions: ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StrictData
                      StandaloneDeriving
                      TypeApplications
                      TypeOperators
  default-language: Haskell2010

common common-ghc-options
  ghc-options: -Wall
               -Wcompat
               -Werror
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -fhide-source-paths
               -Wno-unused-do-bind

common common-rts-options
  ghc-options: -rtsopts
               -threaded
               -with-rtsopts=-N

library
  import: common-extensions
  import: common-ghc-options
  hs-source-dirs:
    src
  exposed-modules:
    HPkg.Model.User
    HPkg.Model.Organisation
    HPkg.Model.Package
    HPkg.Model.Package.Orphans
  build-depends:
    aeson                 ^>= 2.0,
    async                 ^>= 2.2,
    base                  ^>= 4.14,
    bytestring,
    Cabal                 ^>= 3.6,
    colourista            ^>= 0.1,
    directory             ^>= 1.3,
    envparse              ^>= 0.4,
    hashable              ^>= 1.3,
    mtl                   ^>= 2.2,
    optparse-applicative  ^>= 0.16,
    password              ^>= 2.1,
    pg-entity             ^>= 0.0,
    pg-transact           ^>= 0.3,
    postgresql-simple     ^>= 0.6,
    resource-pool         ^>= 0.2,
    text                  ^>= 1.2,
    -- text-display          ^>= 0.0,
    time                  ^>= 1.9,
    uuid                  ^>= 1.3,
    vector                ^>= 0.12,
    versions              ^>= 5.0,
    wai                   ^>= 3.2,
    wai-cors              ^>= 0.2,
    wai-extra             ^>= 3.1,
    wai-middleware-static ^>= 0.9,
    warp                  ^>= 3.3,

executable hpkg-server
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  hs-source-dirs:
      app/server
  build-depends:
      base
    , hpkg

test-suite hpkg-test
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      aeson
    , aeson-pretty
    , base
    , Cabal
    , hpkg
    , hspec
    , hspec-expectations-lifted
    , hspec-pg-transact
    , password         
    , pg-transact
    , postgresql-migration
    , postgresql-simple
    , string-qq
    , time
    , uuid
  other-modules:
    HPkg.UserSpec
    HPkg.PackageSpec
    SpecHelpers
